fixed z-index on projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,7 @@ a {
         justify-content:space-between;
         gap: 10px;
         position: fixed;
+        z-index: 0;
     }
 
     #left-container header {
